Bug 171525 - ksysguard "Monitor remote machine..." not working
Summary: ksysguard "Monitor remote machine..." not working
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
: 169252 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-09-23 16:04 UTC by mcas
Modified: 2009-07-18 22:52 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
patch 1/6 for bug 171525 (3.17 KB, patch)
2009-05-25 20:44 UTC, Sebastien Martel
Details
patch 2/6 for bug 171525 (863 bytes, patch)
2009-05-25 20:45 UTC, Sebastien Martel
Details
patches for bug 171525 (2.96 KB, patch)
2009-05-25 20:48 UTC, Sebastien Martel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mcas 2008-09-23 16:04:51 UTC
Version:           ksysguard (using KDE 4.1.1)
OS:                Linux
Installed from:    Ubuntu Packages

In ksysguard, choose "File" -> "New Worksheet...", and then "File" -> "Monitor remote machine...". Enter the hostname and connection type=ssh and click OK. No connection is made to the remote machine, and if ksysguard is started from a terminal, the message "X Error: BadWindow (invalid Window parameter) 3, Major opcode: 20 (X_GetProperty), Resource id: 0x34008b2" is printed. Exactly the same configuration (including the same remote host" works OK in Hardy (KDE 3.5). The command: "ssh remotehost ksysguardd" runs ksysguardd on the remote machine OK.

Source package: kdebase-workspace
Release of Ubuntu: Ubuntu intrepid (development branch) 8.10
ksysguard package version: 4:4.1.1-0ubuntu5
Comment 1 mcas 2008-09-23 16:05:35 UTC
This bug was reported on the ubuntu bug tracker under: https://bugs.edge.launchpad.net/ubuntu/+source/kdebase/+bug/272596 
Comment 2 Manuel Amador (Rudd-O) 2008-12-09 18:13:25 UTC
I can verify this is true.  What is the fix waiting for?  The description in the ubuntu link is accurate.
Comment 3 John Tapsell 2008-12-10 11:12:55 UTC
(In reply to comment #2)
> I can verify this is true.  What is the fix waiting for?  The description in
> the ubuntu link is accurate.

It's waiting for someone to fix it :-)

Ideally a proper dialog box should be made, to let the user enter a username and password etc.  Maybe using the 'kdessh' program or something.
Comment 4 Manuel Amador (Rudd-O) 2008-12-10 13:53:52 UTC
Nononono man, there is no password needed, I have pubkey authentication working *just fine*, it worked in kde3 without prompting for a password, and nonetheless it now fails, so it's NOT the password thing.
Comment 5 Georges Drapeau 2009-04-10 03:36:28 UTC
*** This bug has been confirmed by popular vote. ***
Comment 6 Sebastien Martel 2009-05-25 20:44:25 UTC
Created attachment 33997 [details]
patch 1/6 for bug 171525
Comment 7 Sebastien Martel 2009-05-25 20:45:14 UTC
Created attachment 33998 [details]
patch 2/6 for bug 171525
Comment 8 Sebastien Martel 2009-05-25 20:48:32 UTC
Created attachment 33999 [details]
patches for bug 171525

Contains patch
SensorBrowser.cc.patch
SensorBrowser.h.patch
SensorManager.cc.patch
SensorManager.h.patch
SensorShellAgent.cc.patch
SensorSocketAgent.cc.patch

for bug 171525, those are diff file agains stable 4.2.2
Comment 9 Sebastien Martel 2009-05-25 20:49:04 UTC
I ran into the same problem and after investigation it turns out that in the code there we were not completely adding the host that is why it was not showing up in the list. The patch for this fix are attached on this post, as discussed with John, those are diff files against the 4.2.2 branch.  Since most of the files have not change since then it should be alright to merge.  I could do some diff against daily snapshot if necessary.  In addition, The error:

X Error: BadWindow (invalid Window parameter) 3, Major
opcode: 20 (X_GetProperty), Resource id: 0x34008b2
Was not related to this problem, it is caused by something different.  Most likely the same problem as here
http://bugs.kde.org/show_bug.cgi?id=179305

I didn't check into that since I can reproduce the error but it doesn't crash for me.
Comment 10 Sebastien Martel 2009-05-25 21:07:17 UTC
Please note also at this time we are limited to one connection per hostname, for example you cannot connect to localhost:3112 and localhost:3113.  However, one can connect to localhost:3112 and 127.0.0.1:3113 which is acceptable now.
Comment 11 John Tapsell 2009-05-30 14:32:17 UTC
SVN commit 975475 by johnflux:

Fix monitoring a remote machine

Author: Sebastien Martel
BUG:171525



 M  +55 -7     SensorBrowser.cc  
 M  +10 -0     SensorBrowser.h  
 M  +5 -22     ksgrd/SensorManager.cc  
 M  +1 -1      ksgrd/SensorManager.h  
 M  +4 -6      ksgrd/SensorShellAgent.cc  
 M  +5 -3      ksgrd/SensorSocketAgent.cc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=975475
Comment 12 Sebastien Martel 2009-07-18 22:52:08 UTC
*** Bug 169252 has been marked as a duplicate of this bug. ***