Fix monitoring a remote machine

Author: Sebastien Martel
BUG:171525


svn path=/trunk/KDE/kdebase/workspace/; revision=975475